<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@drawable/plama"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:fontFamily="@font/ka1"
        android:textSize="45sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_score"
        android:fontFamily="@font/ka1"
        android:textSize="40sp"
        android:layout_marginTop="80dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/highScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:fontFamily="@font/ka1"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:textColor="#000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_try_again"
        android:fontFamily="@font/ka1"
        android:backgroundTint="#673d20"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:onClick="tryAgain"/>
</LinearLayout>